--- a/CSS/Video 34 CSS Float and Clear/index.html
+++ b/CSS/Video 34 CSS Float and Clear/index.html
@@ -13,7 +13,7 @@
     }
 
     img {
-        float: right;
+        float: both;
     }
 
     .cards {
@@ -21,6 +21,7 @@
     }
     .card:nth-child(3){
         clear: right;
+        background-color: palevioletred;
     }
 </style>
 
@@ -36,8 +37,7 @@
         </div>
         <div class="card">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi, quam. Doloribus, numquam porro! Unde quam, non quod harum explicabo, libero obcaecati, quasi dicta aliquam minima odit molestiae eaque eligendi? Quaerat amet officia nostrum delectus explicabo, est natus voluptas odio incidunt. Repellendus, similique nisi cum expedita voluptatum magni harum tempore dolore odio iusto dolores possimus nemo repellat consequatur placeat, eaque voluptas voluptatem eius corporis atque reiciendis, veritatis amet! Facere consectetur sequi quae quas numquam. Ab voluptas saepe aliquam? Molestias in, ad modi rerum quasi est voluptas perferendis dignissimos quis culpa facilis corporis, minima, ex aspernatur deserunt natus cupiditate vero distinctio. Nemo exercitationem eius similique? Accusamus, natus. Tenetur soluta deserunt quod, distinctio repellat esse ipsa impedit eum culpa ducimus, iusto consequuntur, ad saepe magni numquam sequi nostrum dolores. Sunt, doloribus ducimus cupiditate qui maiores aut vel aliquid dicta nemo quos dolorum nisi quam! Voluptates quisquam recusandae vel suscipit perferendis tempora vero error temporibus quam ipsum, eligendi vitae repellendus laborum distinctio corporis repudiandae dolor officiis fugiat, numquam architecto fugit? Consequuntur at quod deleniti hic soluta nesciunt officiis est impedit inventore repellat illum porro laborum excepturi ipsam, ex velit nam provident similique. Voluptas asperiores ratione esse vero, eligendi harum magnam nemo excepturi? Doloremque cumque iusto dolores dicta, autem doloribus minus incidunt obcaecati facere delectus perspiciatis, necessitatibus iure. Iste deserunt cumque sunt labore, debitis incidunt dolorem atque molestias voluptates fugit odio officia magnam dolores blanditiis sit. Libero molestias officia, excepturi veniam vero, velit sit vel natus laboriosam, quas repellat quod unde temporibus quisquam! Ab quod cupiditate quos perspiciatis? Deserunt totam modi, minima illum veritatis minus, repellat magnam, nesciunt consequatur necessitatibus voluptates ipsum. Aspernatur magnam nam totam iure mollitia, autem aliquam et, quibusdam doloremque earum cupiditate sed molestias voluptates amet ullam labore ex neque! Ullam dolores praesentium expedita fugiat ab, placeat quia id atque eveniet repudiandae. Sequi vitae unde nostrum, fugiat quis quas quo perferendis, assumenda est suscipit fuga omnis eum adipisci repellendus asperiores excepturi incidunt obcaecati minima deleniti delectus. Iure ipsa sit porro nostrum nemo amet illum in.</div>
         <div class="card">Card </div>
-
-        6:15
+    
     </div>
 </body>
 
