--- a/Challenge 5/index.html
+++ b/Challenge 5/index.html
@@ -9,29 +9,36 @@
 </head>
 
 <body>
+
     <header>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Contact us</li>
-                <li>About</li>
+                <li><a href="">Home</a></li>
+                <li><a href="">Contact us</a></li>
+                <li><a href="">About</a></li>
                 <li>
-
-                    <input type="text" placeholder="Enter you name">
+                    <input type="text" placeholder="Enter your name">
                 </li>
             </ul>
         </nav>
     </header>
+
     <main>
-    <div class="container">
+        <div class="container">
+            <div class="box1"></div>
+            <div class="box2"></div>
+        </div>
 
-    </div>
+        <div class="textbox">
+            Welcome to the sigmaweb dev expresss
+        </div>
+        <div class="logo">
+            
+        </div>
     </main>
-   
-    </div>
+
     <footer>
-
     </footer>
-</body>
 
+</body>
 </html>
