--- a/CSS/Video 38 Flex Box/index.html
+++ b/CSS/Video 38 Flex Box/index.html
@@ -11,35 +11,70 @@
             display: flex;
             height: 80vh;
             /* justify-content: space-between; */
-            justify-content: center;
+            /* justify-content: center; */
             align-items: center;
             /* flex-direction: row-reverse; */
+            /* flex-direction: column; */
+            /* flex-wrap: wrap-reverse; */
+            flex-wrap: wrap;
+            /* align-content: center; */
+            flex-flow: row wrap;
+            /* gap: 30px;
+            row-gap: 40px;
+            column-gap: 14px; */
+            gap: 40px 10px;
+            /* gap: 10px 40px; --> gap row and column */
         }
 
         .item {
+
+            /* flex-grow: 1; */
             height: 52px;
             width: 52px;
-            margin: 4px;
+            /* margin: 4px; */
             background-color: magenta;
             border: 2px solid black;
+            text-align: center;
+
+
+        }
+
+        .item1 {
+            /* flex-grow: 5; */
+            align-self: first baseline;
+        }
+
+        .item2 {
+            flex-shrink: 2;
+        }
+
+        .order-1 {
+            order: 100;
+        }
+
+        .order-2 {
+            order: 2;
+        }
+
+        .order-3 {
+            order: 5;
         }
     </style>
 </head>
 
 <body>
     <main>
-        13:22
         <div class="cont">
-            <div class="item">1</div>
-            <div class="item">2</div>
-            <div class="item">3</div>
-            <div class="item">4</div>
-            <div class="item">5</div>
-            <div class="item">6</div>
+            <div class="item order-1">1</div>
+            <div class="item order-2">2</div>
+            <div class="item order-3">3</div>
+            <div class="item item1">5</div>
+            <div class="item item2">6</div>
             <div class="item">7</div>
             <div class="item">8</div>
             <div class="item">9</div>
             <div class="item">10</div>
+
         </div>
     </main>
 </body>
