--- a/Challenge 6/index.html
+++ b/Challenge 6/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <!-- Design this website's Navbar using flexbox -->
-
+<h1>Hello</h1>
     <div class="cont">
         <div class="logo"><img src="ultraedit.webp" alt="">
             <div class="text">
