--- a/Challenge 6/index.html
+++ b/Challenge 6/index.html
@@ -21,11 +21,31 @@
 
         </div>
         <div class="item">
-            <div class="menu-item p">Product</div>
-            <div class="menu-item">Buy</div>
-            <div class="menu-item">Service</div>
-            <div class="menu-item">Learn</div>
-            <div class="menu-item">Company</div>
+            <div class="menu-item p">Product<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="14"
+                    height="20" color="currentColor" fill="none" stroke="currentColor" stroke-width="1.5"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M18 9.00005C18 9.00005 13.5811 15 12 15C10.4188 15 6 9 6 9" />
+                </svg></div>
+            <div class="menu-item">Buy<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="14" height="20"
+                    color="currentColor" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round">
+                    <path d="M18 9.00005C18 9.00005 13.5811 15 12 15C10.4188 15 6 9 6 9" />
+                </svg></div>
+            <div class="menu-item">Service<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="14"
+                    height="20" color="currentColor" fill="none" stroke="currentColor" stroke-width="1.5"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M18 9.00005C18 9.00005 13.5811 15 12 15C10.4188 15 6 9 6 9" />
+                </svg></div>
+            <div class="menu-item">Learn<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="14"
+                    height="20" color="currentColor" fill="none" stroke="currentColor" stroke-width="1.5"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M18 9.00005C18 9.00005 13.5811 15 12 15C10.4188 15 6 9 6 9" />
+                </svg></div>
+            <div class="menu-item">Company<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="14"
+                    height="20" color="currentColor" fill="none" stroke="currentColor" stroke-width="1.5"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M18 9.00005C18 9.00005 13.5811 15 12 15C10.4188 15 6 9 6 9" />
+                </svg></div>
         </div>
         <div class="load">
             <button>Download</button>
