--- a/Challenge 7/index.html
+++ b/Challenge 7/index.html
@@ -61,75 +61,94 @@
     </div>
     <div class="container1">
         <div class="itemb item-1">
-            <div class = "lang">English</div>
-            <div>
-
-                <button class="btn1" style=" background-color: rgb(82, 238, 238);">Download 32-bit</button>
-                <button class="btn2" style="background-color: rgb(81, 255, 104);">Download 64-bit</button>
+            <div class="lang">English</div>
+            <div class="lang">Includes all languages</div>
+            <div class="buttons">
+                <a
+                    href="https://downloads.ultraedit.com/main/ue/win/ue_allinone.exe?_gl=1*10ln8mw*_gcl_au*MjEwNTQxNjI3OC4xNzY4Mjg5MDE2*_ga*MTMxNDIyMjAwNS4xNzY4Mjg5MDE2*_ga_QNXHVTPWNS*czE3NzA2NDU5MTMkbzQkZzEkdDE3NzA2NDYxNDkkajckbDAkaDIwNzY2NzQzNjg.">Download
+                    64-bit</a>
             </div>
         </div>
         <div class="itemb item-2">
-            <div class = "lang">Deutsch</div>
-            <div>
+            <div class="lang">Deutsch</div>
+            <div class="lang">German</div>
+            <div class="buttons">
+                <a
+                    href="https://downloads.ultraedit.com/main/ue/win/ue_german_64.exe?_gl=1*ww61tk*_gcl_au*MjEwNTQxNjI3OC4xNzY4Mjg5MDE2*_ga*MTMxNDIyMjAwNS4xNzY4Mjg5MDE2*_ga_QNXHVTPWNS*czE3NzA2NDU5MTMkbzQkZzEkdDE3NzA2NDY5ODckajYwJGwwJGgyMDc2Njc0MzY4">Download
+                    64-bit</a>
 
-                <button class="btn1" style=" background-color: rgb(82, 238, 238);">Download 32-bit</button>
-                <button class="btn2" style="background-color: rgb(81, 255, 104);">Download 64-bit</button>
             </div>
         </div>
         <div class="itemb item-3">
-            <div class = "lang">Italiano</div>
-        <div>
-        <button class="btn1" style=" background-color: rgb(82, 238, 238);">Download 32-bit</button>
-        <button class="btn2" style="background-color: rgb(81, 255, 104);">Download 64-bit</button>
-        </div>
+            <div class="lang">Italiano</div>
+            <div class="lang">Italian</div>
+            <div class="buttons">
+                <a
+                    href="https://downloads.ultraedit.com/main/ue/win/ue_italian_64.exe?_gl=1*1da5115*_gcl_au*MjEwNTQxNjI3OC4xNzY4Mjg5MDE2*_ga*MTMxNDIyMjAwNS4xNzY4Mjg5MDE2*_ga_QNXHVTPWNS*czE3NzA2NDU5MTMkbzQkZzEkdDE3NzA2NDY5OTAkajU3JGwwJGgyMDc2Njc0MzY4">Download
+                    64-bit</a>
+            </div>
         </div>
 
         <div class="itemb item-4">
-            <div class = "lang">Español</div>
-        <div>
-        <button class="btn1" style=" background-color: rgb(82, 238, 238);">Download 32-bit</button>
-        <button class="btn2" style="background-color: rgb(81, 255, 104);">Download 64-bit</button>
-        </div>
+            <div class="lang">Español</div>
+            <div class="lang">Spanish</div>
+            <div class="buttons">
+                <a
+                    href="https://downloads.ultraedit.com/main/ue/win/ue_spanish_64.exe?_gl=1*4dxh4*_gcl_au*MjEwNTQxNjI3OC4xNzY4Mjg5MDE2*_ga*MTMxNDIyMjAwNS4xNzY4Mjg5MDE2*_ga_QNXHVTPWNS*czE3NzA2NDU5MTMkbzQkZzEkdDE3NzA2NDY5OTIkajU1JGwwJGgyMDc2Njc0MzY4">Download
+                    64-bit</a>
+            </div>
 
         </div>
         <div class="itemb item-5">
-            <div class = "lang">Français</div>
-        <div>
-        <button class="btn1" style=" background-color: rgb(82, 238, 238);">Download 32-bit</button>
-        <button class="btn2" style="background-color: rgb(81, 255, 104);">Download 64-bit</button>
-        </div>
+            <div class="lang">Français</div>
+            <div class="lang">French</div>
+            <div class="buttons">
+                <a
+                    href="https://downloads.ultraedit.com/main/ue/win/ue_french_64.exe?_gl=1*nlb4t4*_gcl_au*MjEwNTQxNjI3OC4xNzY4Mjg5MDE2*_ga*MTMxNDIyMjAwNS4xNzY4Mjg5MDE2*_ga_QNXHVTPWNS*czE3NzA2NDU5MTMkbzQkZzEkdDE3NzA2NDY5OTQkajUzJGwwJGgyMDc2Njc0MzY4">Download
+                    64-bit</a>
+            </div>
 
         </div>
         <div class="itemb item-6">
-            <div class ="lang">Portuguese</div>
-        <div>
-        <button class="btn1" style=" background-color: rgb(82, 238, 238);">Download 32-bit</button>
-        <button class="btn2" style="background-color: rgb(81, 255, 104);">Download 64-bit</button>
-        </div>
+            <div class="lang">Portuguese</div>
+            <div class="lang">Brazilian Portuguese</div>
+            <div class="buttons">
+
+                <a
+                    href="https://downloads.ultraedit.com/main/ue/win/ue_portuguese_64.exe?_gl=1*1rimuop*_gcl_au*MjEwNTQxNjI3OC4xNzY4Mjg5MDE2*_ga*MTMxNDIyMjAwNS4xNzY4Mjg5MDE2*_ga_QNXHVTPWNS*czE3NzA2NDU5MTMkbzQkZzEkdDE3NzA2NDY5OTYkajUxJGwwJGgyMDc2Njc0MzY4">Download
+                    64-bit</a>
+            </div>
 
         </div>
         <div class="itemb item-7">
-            <div class = "lang">Korean</div>
-        <div>
-        <button class="btn1" style=" background-color: rgb(82, 238, 238);">Download 32-bit</button>
-        <button class="btn2" style="background-color: rgb(81, 255, 104);">Download 64-bit</button>
-        </div>
+            <div class="lang">한국어</div>
+            <div class="lang">Korean</div>
+            <div class="buttons">
+                <a
+                    href="https://downloads.ultraedit.com/main/ue/win/ue_korean_64.exe?_gl=1*ru0i5a*_gcl_au*MjEwNTQxNjI3OC4xNzY4Mjg5MDE2*_ga*MTMxNDIyMjAwNS4xNzY4Mjg5MDE2*_ga_QNXHVTPWNS*czE3NzA2NDU5MTMkbzQkZzEkdDE3NzA2NDcwMDEkajQ2JGwwJGgyMDc2Njc0MzY4">Download
+                    64-bit</a>
+            </div>
 
         </div>
         <div class="itemb item-8">
-            <div class = "lang">Japanese</div>
-        <div>
-        <button class="btn1" style=" background-color: rgb(82, 238, 238);">Download 32-bit</button>
-        <button class="btn2" style="background-color: rgb(81, 255, 104);">Download 64-bit</button>
-        </div>
+            <div class="lang">日本</div>
+            <div class="lang">Japanese</div>
+            <div class="buttons">
+                <a
+                    href="https://downloads.ultraedit.com/main/ue/win/ue_japanese_64.exe?_gl=1*kxfd4z*_gcl_au*MjEwNTQxNjI3OC4xNzY4Mjg5MDE2*_ga*MTMxNDIyMjAwNS4xNzY4Mjg5MDE2*_ga_QNXHVTPWNS*czE3NzA2NDU5MTMkbzQkZzEkdDE3NzA2NDY5OTkkajQ4JGwwJGgyMDc2Njc0MzY4">Download
+                    64-bit</a>
+            </div>
 
         </div>
         <div class="itemb item-9">
-            <div class = "lang">Chinese</div>
-        <div>
-        <button class="btn1" style=" background-color: rgb(82, 238, 238);">Download 32-bit</button>
-        <button class="btn2" style="background-color: rgb(81, 255, 104);">Download 64-bit</button>
-        </div>
+            <div class="lang">华语</div>
+            <div class="lang">Chinese</div>
+            <div class="buttons">
+                <a
+                    href="https://downloads.ultraedit.com/main/ue/win/ue_chinese_64.exe?_gl=1*1nazx9b*_gcl_au*MjEwNTQxNjI3OC4xNzY4Mjg5MDE2*_ga*MTMxNDIyMjAwNS4xNzY4Mjg5MDE2*_ga_QNXHVTPWNS*czE3NzA2NDU5MTMkbzQkZzEkdDE3NzA2NDcwMDMkajQ0JGwwJGgyMDc2Njc0MzY4">Download
+                    64-bit</a>
+
+            </div>
 
         </div>
     </div>
