--- a/CSS/Video 46 CSS Animation/index.html
+++ b/CSS/Video 46 CSS Animation/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Animation</title>
 </head>
 <style>
-
     .container {
         width: 80vw;
         height: 30vh;
@@ -17,23 +17,57 @@
         width: 100px;
         height: 100px;
         background-color: rgb(44, 58, 163);
-        animation: Lipsitakaanimation;
+        /* animation: Lipsitakaanimation;
         animation-duration: 1s;
         animation-iteration-count: infinite;
         animation-timing-function: linear;
         animation-delay: 1s;
-        animation-direction: alternate-reverse;
+      animation-direction: alternate-reverse;
+      animation-play-state: paused;
+      animation: name duration timing-function delay iteration-count direction fill-mode;
+      */
+        animation: Lipsitakaanimation 3s linear 1s 1 ,
+        lipsita1 3s ease-in 1s 1 ;
     }
-    @keyframes Lipsitakaanimation {
-        from{
 
+    @keyframes Lipsitakaanimation {
+        from {
+            background-color: rgb(161, 118, 204);
         }
-        to{
-            transform: translate(1000px);
+
+        to {
+            transform: translate(500px);
+            background-color: yellow;
+        }
+    }
+
+    @keyframes lipsita1 {
+        0% {
+
+            transform: rotate(100deg)
+        }
+
+        20% {
+
+            transform: rotate(200deg)
+        }
+
+        50% {
+
+            transform: rotate(220deg)
+        }
+
+        80% {
+
+            transform: rotate(300deg)
+        }
+
+        100% {
+            transform: rotate(310deg)
         }
     }
 </style>
-    
+
 <body>
     <div class="container">
         <div class="box">
@@ -41,4 +75,5 @@
         </div>
     </div>
 </body>
+
 </html>
