--- a/Challenge 7/index.html
+++ b/Challenge 7/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Challenge 6</title>
+    <title>Challenge 7</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -57,10 +57,10 @@
         <div class="logo1">
             <img src="ultraedit.webp" alt="">
         </div>
-        <div class="text1">Download UltraEdit</div>
+        <div class="text1">Download <b>UltraEdit</b></div>
     </div>
     <div class="container1">
-        <div class="itemb item-1">
+        <div class="itemb ">
             <div class="lang">English</div>
             <div class="lang">Includes all languages</div>
             <div class="buttons">
@@ -69,7 +69,7 @@
                     64-bit</a>
             </div>
         </div>
-        <div class="itemb item-2">
+        <div class="itemb ">
             <div class="lang">Deutsch</div>
             <div class="lang">German</div>
             <div class="buttons">
@@ -79,7 +79,7 @@
 
             </div>
         </div>
-        <div class="itemb item-3">
+        <div class="itemb ">
             <div class="lang">Italiano</div>
             <div class="lang">Italian</div>
             <div class="buttons">
@@ -89,7 +89,7 @@
             </div>
         </div>
 
-        <div class="itemb item-4">
+        <div class="itemb ">
             <div class="lang">Español</div>
             <div class="lang">Spanish</div>
             <div class="buttons">
@@ -99,7 +99,7 @@
             </div>
 
         </div>
-        <div class="itemb item-5">
+        <div class="itemb ">
             <div class="lang">Français</div>
             <div class="lang">French</div>
             <div class="buttons">
@@ -109,7 +109,7 @@
             </div>
 
         </div>
-        <div class="itemb item-6">
+        <div class="itemb ">
             <div class="lang">Portuguese</div>
             <div class="lang">Brazilian Portuguese</div>
             <div class="buttons">
@@ -120,7 +120,7 @@
             </div>
 
         </div>
-        <div class="itemb item-7">
+        <div class="itemb ">
             <div class="lang">한국어</div>
             <div class="lang">Korean</div>
             <div class="buttons">
@@ -130,7 +130,7 @@
             </div>
 
         </div>
-        <div class="itemb item-8">
+        <div class="itemb ">
             <div class="lang">日本</div>
             <div class="lang">Japanese</div>
             <div class="buttons">
@@ -140,7 +140,7 @@
             </div>
 
         </div>
-        <div class="itemb item-9">
+        <div class="itemb ">
             <div class="lang">华语</div>
             <div class="lang">Chinese</div>
             <div class="buttons">
